--- a/index.html
+++ b/index.html
@@ -135,6 +135,14 @@ By <a href="https://josuamarcelc.com/" role="author" class="text-decoration-none
             <p class="h3 bold">281 comments</p>
           </header>
         </a>
+        <a href="https://seoultra.id">
+          <amp-img width="360" height="360" layout="responsive" src="https://bestvalueproduct.id/assets/images/bestvalueproduct/01-thinwall-500ml-kotak-makan-plastik-thinwall-container.jpg"></amp-img>
+          <header class="absolute bottom-0 right-0 left-0 center m3 p3">
+            <h3 class="caps bold">Vakum Thinwall Murah</h3>
+            <h1 class="h2 my1">bestvalueproduct adalah Toko Plastik Online Terlengkap menjual plastik vakum makanan dan minuman serta packaging plastik lainnya.</h1>
+            <p class="h3 bold">281 comments</p>
+          </header>
+        </a>
       </article>
   </aside>
 </main>
