--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ By <a href="https://josuamarcelc.com/" role="author" class="text-decoration-none
         </a>
       </article>
       <article class="ampstart-article-summary m0 relative">
-        <a href="https://seoultra.id">
+        <a href="https://bestvalueproduct.id">
           <amp-img width="360" height="360" layout="responsive" src="https://bestvalueproduct.id/assets/images/bestvalueproduct/01-thinwall-500ml-kotak-makan-plastik-thinwall-container.jpg"></amp-img>
           <header class="absolute bottom-0 right-0 left-0 center m3 p3">
             <h3 class="caps bold">Vakum Thinwall Murah</h3>
