--- a/index.html
+++ b/index.html
@@ -128,22 +128,22 @@ By <a href="https://josuamarcelc.com/" role="author" class="text-decoration-none
 
     <h2 class="m3 mb4 pb4 caps bold center h3">Cloudflare Pages Dev's Project</h2>
       <article class="ampstart-article-summary m0 relative">
-        <a href="https://seoultra.id">
+        <a target="_blank" href="https://seoultra.id/">
           <amp-img width="360" height="200" layout="responsive" src="https://seoultra.id/assets/images/seoultra/seoultra-id-about-us.png"></amp-img>
           <header class="absolute bottom-0 right-0 left-0 center m3 p3">
             <h3 class="caps bold">Indonesian SEO Blog</h3>
             <h1 class="h2 my1">High functional SEO knowledge for Indonesian People</h1>
-            <p class="h3 bold">281 comments</p>
+            <p class="h3 bold">2821 comments</p>
           </header>
         </a>
       </article>
       <article class="ampstart-article-summary m0 relative">
-        <a href="https://bestvalueproduct.id">
+        <a target="_blank" href="https://bestvalueproduct.id/">
           <amp-img width="360" height="360" layout="responsive" src="https://bestvalueproduct.id/assets/images/bestvalueproduct/01-thinwall-500ml-kotak-makan-plastik-thinwall-container.jpg"></amp-img>
           <header class="absolute bottom-0 right-0 left-0 center m3 p3">
             <h3 class="caps bold">Vakum Thinwall Murah</h3>
             <h1 class="h2 my1">bestvalueproduct adalah Toko Plastik Online Terlengkap menjual plastik vakum makanan dan minuman serta packaging plastik lainnya.</h1>
-            <p class="h3 bold">281 comments</p>
+            <p class="h3 bold">2381 comments</p>
           </header>
         </a>
       </article>
