--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <meta property="og:image:width" content="400" />
   <meta property="og:image:height" content="400" />
   <meta property="og:image:alt" content="Image alternative text, if the image is missing" />
-  <meta property="og:image:type" content="https://pbs.twimg.com/profile_images/1629865203436339203/1N95PGi8_400x400.jpg" />
+  <meta property="og:image:type" content="https://pbs.twimg.com/media/DgMb-9BVAAA4ZX2?format=jpg&name=small" />
   <meta property="og:url" content="https://josuamarcelc.pages.dev/" />
   <meta property="og:site_name" content="Cloudflare Pages Dev: Josuamarcelc" />
 
@@ -25,7 +25,7 @@
   <meta name="twitter:title" content="Cloudflare Pages Dev: Josuamarcelc">
   <meta name="twitter:creator" content="josuamarcelc">
   <meta name="twitter:description" content="Cloudflare Pages is a JAMstack platform for frontend developers to collaborate and deploy websites. Sign Up · Read docs. Developer-focused with effortless Git">
-  <meta name="twitter:image" content="https://pbs.twimg.com/profile_images/1629865203436339203/1N95PGi8_400x400.jpg">
+  <meta name="twitter:image" content="https://pbs.twimg.com/media/DgMb-9BVAAA4ZX2?format=jpg&name=small">
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
   <meta name="amp-google-client-id-api" content="googleanalytics">
   <script async="" src="https://cdn.ampproject.org/v0.js"></script>
